# driver-fatigue-detection

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: driver_fatigue_detection.ipynb
src/: config.py  data.py  inference.py  models.py  training.py
